--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 * {
     margin: 0px;
-    padding: opx;
-    font-family: 'Times New Roman', Times, serif;
-
+    font-family: "Satisfy", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+nav {
+    background-color: rgb(255, 0, 0);
+    height: 3rem;
 }
 
-nav {
-    background-color: greenyellow;
+nav ul {
+    justify-content: end;
 }
 
 li {
@@ -14,23 +18,105 @@ li {
 }
 
 ul {
-
-
     display: flex;
     flex-direction: row;
-    justify-content: end;
 }
 
 a {
-
     text-decoration: none;
-    padding: 10px;
     color: black;
     line-height: 40px;
 }
 
 a:hover {
     color: white;
+}
+
+button {
+    line-height: 2.6rem;
+    background-color: transparent;
+    color: white;
+    margin: 2px;
+    border: none;
+}
+
+#login {
+    background-color: rgb(255, 0, 0);
+    position: absolute;
+    width: 100%;
+    height:justify;
+    z-index: index inherit;
+    top: 0%;
+    bottom: 0%;
+    display: none;
+}
+
+#popup {
+    display: flex;
+    justify-content: center;
+    display:none;
+}
+
+.reg {
+    display: flex;
+    justify-content: space-between;
+}
+
+fieldset {
+    display: flex;
+    width: 2rem;
+    height: justify;
+    position: absolute;
+    flex-direction: column;
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    border: 2px solid rgb(225, 225, 225, .2);
+    box-shadow: 0 0 10px rgb(0, 0, 0, .2);
+    color: white;
+    margin-top: 4rem;
+    border-radius: 3rem;
+    z-index: initial;
+}
+
+form .aln {
+    display: flex;
+    flex-direction: column;
+}
+
+form {
+    display: flex;
+    align-items: center;
+}
+
+.aln label {
+    margin-top: 0.9rem;
+    margin-bottom: 0.2rem;
+}
+.aln input{
+   border: none;
+   line-height: 1.6rem;
+   border-radius: 0.7rem;
+}
+.aln select{
+    border: none;
+    height: 1.9rem;
+    border-radius: 0.7rem;
+ }
+
+#back {
+    background-color: rgb(0, 255, 0);
+    color: white;
+    line-height: 2rem;
+    border-radius: 1rem;
+    width: 4rem;
+}
+
+#clo {
+    background-color: rgb(0, 255, 0);
+    color: white;
+    line-height: 2rem;
+    border-radius: 1rem;
+    width: 5rem;
 }
 
 #one {
@@ -40,38 +126,47 @@ a:hover {
 
 .hero {
 
-    border-radius: 30px 0;
-    width: 10%;
-    height: 30%;
-    margin: 25px;
-    box-shadow: 0 0 3px 10px white;
+    border-radius: 50%;
+    width: 9rem;
+    height: 9rem;
+    box-shadow: 0 0 40px 10px red;
 }
 
-#heros {
+main {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
+}
+
+.arr {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 2rem;
 }
 
 #sh {
 
     width: 300px;
-    height: 300px;
+    height: justify;
     border-radius: 50%;
 }
 
 #info {
     display: flex;
     height: 30%;
-    margin-top: 3%;
-    ;
     justify-content: space-around;
 }
 
 #info p {
     width: 60%;
-    margin-top: 5%;
+    margin-top: 6%;
     text-align: center;
     text-indent: 5%;
+}
 
+div a {
+    display: flex;
+    justify-content: center;
 }
